# KairoDiary

./: README.md  main.py  pyproject.toml  setup.py
assets/: KairoDiary.icns
core/components/: __init__.py  calendarView.py  diaryView.py  noteView.py  todoView.py
core/editor/: __init__.py  baseEditor.py  diaryEditor.py  noteEditor.py  textEditWithContextMenu.py
core/server/: __init__.py  accountServer.py  fileServer.py  textServer.py
core/window/: __init__.py  loginWindow.py  mainWindow.py  settingsDialog.py
docs/: TextProcessor_Guide.md
